<resources>
    <string name="app_name">Operations Orchestration</string>
    <string name="micro_focus_logo_description">Micro Focus Logo</string>
    <string name="email_input_hint">Email</string>
    <string name="password_input_hint">Password</string>
    <string name="login_buton">Login</string>
    <string name="create_account">No account yet? <b>Create one</b></string>
    <string name="operations_orchestration">Operations Orchestration</string>
    <string name="title_activity_hosts_list">Operations Orchestration</string>
    <string name="display_central_hosts">No Central hosts added yet</string>
    <string name="hostname">Hostname</string>
    <string name="display_name">Display name</string>
    <string name="log_out">Log out</string>
    <string name="hostname_hint">Hostname...</string>
    <string name="display_name_hint">Display name...</string>
    <string name="add">Add</string>
    <string name="secure_label">Secure (HTTPS)</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="confirm_delete_host">Are you sure you want to delete this host?</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="sign_out_confirm">Are you sure you want to sign out?</string>
    <string name="register_message">Manage hosts. Keep your data</string>
    <string name="register_account">CREATE ACCOUNT</string>
    <string name="sign_in_message">Enter your credentials to Sign In</string>
    <string name="welcome">WELCOME</string>
    <string name="login">LOGIN</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_host">Operations Orchestration</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="username">Username...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="execution_time">Execution time</string>
    <string name="number_of_executions">Number of executions</string>
    <string name="user_account">User account</string>
    <string name="roi">ROI</string>
    <string name="step_result">Step result</string>
    <string name="step_name">Step name</string>
</resources>
