<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.imm.operationsorchestrationmobile.activity.HostsActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/hostnameParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="14dp"
        android:theme="@style/TextLabel.Dark">

        <EditText
            android:id="@+id/addHostname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hostname_hint" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/displayNameParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hostnameParent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:theme="@style/TextLabel.Dark">

        <EditText
            android:id="@+id/addDisplayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/display_name_hint" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/checkboxSecure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/displayNameParent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:checked="true"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/secureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/checkboxSecure"
        android:layout_below="@id/displayNameParent"
        android:layout_marginStart="35dp"
        android:layout_marginTop="14dp"
        android:textSize="14sp"
        android:textColor="@color/colorPrimaryDarkText"
        android:text="@string/secure_label" />

</RelativeLayout>