<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/execTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_alignLeft="@+id/flowNameLayout"
        android:layout_alignStart="@+id/flowNameLayout"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        android:text="@string/execution_time"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/executionIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/execTimeLayout"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/checked" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/flowNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/execTimeLayout"
        android:layout_marginStart="90dp"
        android:gravity="center_vertical"
        android:text="@string/display_name"
        android:textAppearance="?android:textAppearanceListItem"
        android:textSize="20sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/execNumberLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/flowNameLayout"
        android:layout_alignLeft="@+id/flowNameLayout"
        android:paddingBottom="16dp"
        android:gravity="center_vertical"
        android:text="@string/number_of_executions"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignEnd="@+id/execNumberLayout"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/execNumberLayout"
        android:layout_marginTop="15dp"
        android:background="#E0E0E0" />

</RelativeLayout>